fix extra scrollbar in right rail

--- a/editor/src/app/components/classes/class-list/class-list.component.scss
+++ b/editor/src/app/components/classes/class-list/class-list.component.scss
@@ -8,6 +8,6 @@ a + a {
 
 .scroll-container {
   overflow: auto;
-  max-height: calc(100% - 118px);
+  max-height: calc(100% - 119px);
   padding-right: 16px;
 }
