--- a/editor/src/app/components/commands/command-info/command-info.component.scss
+++ b/editor/src/app/components/commands/command-info/command-info.component.scss
@@ -7,6 +7,6 @@ code + code {
 
 .scroll-container {
   overflow: auto;
-  max-height: calc(100% - 147px);
+  max-height: calc(100% - 148px);
   padding-right: 16px;
 }
