--- a/editor/src/app/components/enums/enum-editor/enum-editor.component.scss
+++ b/editor/src/app/components/enums/enum-editor/enum-editor.component.scss
@@ -25,6 +25,6 @@
 
 .scroll-container {
   overflow: auto;
-  max-height: calc(100% - 140px);
+  max-height: calc(100% - 141px);
   padding-right: 16px;
 }
